# operator

./: Cargo.toml  Dockerfile  LLM.md
.docker-ctx/: Dockerfile.prebuilt
.github/workflows/: ci.yml  publish.yml
k8s/: deploy-subgraphs.sh  deploy.sh  deployment.yaml  exchange-backend-mainnet.yaml  explorer-devnet.yaml  explorer-mainnet.yaml  explorer-microservices-mainnet.yaml  explorer-testnet.yaml  gateway-devnet.yaml  gateway-mainnet.yaml  gateway-testnet.yaml  indexers-devnet.yaml  indexers-mainnet.yaml  indexers-testnet.yaml  kms-secrets.yaml  namespace.yaml  service.yaml
k8s/crds/: luxchain-crd.yaml  luxexplorer-crd.yaml  luxgateway-crd.yaml  luxindexer-crd.yaml  luxmpc-crd.yaml  luxnetwork-crd.yaml
k8s/mpc/: lux-mpc.yaml  pars-mpc.yaml
k8s/networks/: devnet.yaml  mainnet.yaml  testnet.yaml
k8s/rbac/: clusterrole.yaml  clusterrolebinding.yaml  serviceaccount.yaml
src/: controller.rs  crd.rs  error.rs  main.rs
